# gbgp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md
examples/: random_individual.cpp  subtree_insertion.cpp  trading_grammar.cpp
img/: GeneticAlgorithmsDiagram
include/: cst_tree.h  environment.h  evaluation.h  fitness_function.h  gbgp.h  genetic_operators.h  grammar.h  graph.h  individual.h  population.h  production_rule.h  prune_rule.h  random_gen.h  syntax_tree.h  term.h  terms.h  tree_node.h  vector_ops.h
python/: TestingNotebook.ipynb  bindings.cpp  gp_plots.ipynb  requirements.txt  setup.py  test_bindings.py  test_evaluation.py  test_optimization.py
python/.ipynb_checkpoints/: TestingNotebook-checkpoint.ipynb
python/notebooks/: gp_plots.ipynb  test_notebook.ipynb  trading_grammar.ipynb
python/tests/: TestingNotebook.ipynb  test_bindings.py  test_evaluation.py  test_grammar.py  test_graph.py  test_individual.py  test_optimization.py  test_serialization.py  test_tree_manipulation.py
tests/: test_evaluation.cpp  test_genetic_operators.cpp  test_grammar.cpp  test_graph.cpp  test_individual_generation.cpp  test_logic_gates.cpp  test_memory.cpp  test_optimization.cpp  test_population.cpp  test_random_individual.cpp  test_semantic_evaluation.cpp  test_serialization.cpp  test_simple_evaluation.cpp  test_subtree_insertion.cpp  test_trading_grammar.cpp  test_tree.cpp  test_tree_manipulation.cpp  testing.cpp
util/: arithmetic_parser.cpp  arithmetic_parser.h
